--- a/QuxStorage/QuxStorage.csproj
+++ b/QuxStorage/QuxStorage.csproj
@@ -10,4 +10,8 @@
       <Folder Include="Controllers" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Utils\Utils.csproj" />
+    </ItemGroup>
+
 </Project>
