--- a/QuxStorage/appsettings.json
+++ b/QuxStorage/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5432;Database=qux_storage;Username=postgres;Password=qux123!"
+  },
   "AllowedHosts": "*"
 }
